fix about 200 broken access keys in suite

--- a/pl/suite/chrome/browser/navigator.properties
+++ b/pl/suite/chrome/browser/navigator.properties
@@ -25,9 +25,9 @@ switchskinstitle=Zastosuj motyw
 
 # menu_close labels
 tabs.closeTab.label=Zamknij kartę
-tabs.closeTab.accesskey=C
+tabs.closeTab.accesskey=k
 tabs.close.label=Zamknij
-tabs.close.accesskey=C
+tabs.close.accesskey=k
 
 tabs.recentlyClosed.format=%1$S %2$S
 
