--- a/pl/suite/chrome/common/bookmarks/bookmarks.properties
+++ b/pl/suite/chrome/common/bookmarks/bookmarks.properties
@@ -37,36 +37,36 @@
 cmd_bm_open.label=Otwórz
 cmd_bm_open.accesskey=O
 cmd_bm_expandfolder.label=Rozwiń
-cmd_bm_expandfolder.accesskey=x
+cmd_bm_expandfolder.accesskey=R
 cmd_bm_collapsefolder.label=Zwiń
-cmd_bm_collapsefolder.accesskey=a
+cmd_bm_collapsefolder.accesskey=Z
 cmd_bm_managefolder.label=Otwórz w nowym oknie
-cmd_bm_managefolder.accesskey=W
+cmd_bm_managefolder.accesskey=t
 cmd_bm_cut.label=Wytnij
-cmd_bm_cut.accesskey=u
+cmd_bm_cut.accesskey=W
 cmd_bm_copy.label=Kopiuj
-cmd_bm_copy.accesskey=C
+cmd_bm_copy.accesskey=K
 cmd_bm_paste.label=Wklej
-cmd_bm_paste.accesskey=P
+cmd_bm_paste.accesskey=e
 cmd_bm_delete.label=Usuń
-cmd_bm_delete.accesskey=D
+cmd_bm_delete.accesskey=U
 cmd_bm_movebookmark.label=Przenieś zakładki…
-cmd_bm_movebookmark.accesskey=M
+cmd_bm_movebookmark.accesskey=P
 cmd_bm_rename.label=Zmień nazwę…
-cmd_bm_rename.accesskey=R
+cmd_bm_rename.accesskey=i
 cmd_bm_properties.label=Właściwości
-cmd_bm_properties.accesskey=e
+cmd_bm_properties.accesskey=c
 cmd_bm_sortfolderbyname.label=Sortuj foldery wg nazwy
-cmd_bm_sortfolderbyname.accesskey=N
+cmd_bm_sortfolderbyname.accesskey=g
 cmd_bm_sortfolder.label=Sortuj katalog…
 cmd_bm_sortfolder.accesskey=S
 
 cmd_bm_openinnewwindow.label=Otwórz w nowym oknie
-cmd_bm_openinnewwindow.accesskey=W
+cmd_bm_openinnewwindow.accesskey=m
 cmd_bm_openinnewtab.label=Otwórz w nowej karcie 
-cmd_bm_openinnewtab.accesskey=T 
+cmd_bm_openinnewtab.accesskey=a
 cmd_bm_newfolder.label=Nowy folder…
-cmd_bm_newfolder.accesskey=F
+cmd_bm_newfolder.accesskey=N
 
 ile_newfolder=Nowy folder
 
