--- a/pl/suite/chrome/common/notification.properties
+++ b/pl/suite/chrome/common/notification.properties
@@ -1,12 +1,12 @@
 missingpluginsMessage.title=Aby wyświetlić pełną zawartość tej strony, potrzebne są dodatkowe wtyczki.
 missingpluginsMessage.button.label=Zainstaluj brakujące wtyczki…
-missingpluginsMessage.button.accesskey=I
+missingpluginsMessage.button.accesskey=w
 
 blockedpluginsMessage.title=Niektóre wtyczki wymagane do wyświetlenia tej strony zostały zablokowane z przyczyn bezpieczeństwa.
 blockedpluginsMessage.infoButton.label=Szczegóły…
-blockedpluginsMessage.infoButton.accesskey=D
+blockedpluginsMessage.infoButton.accesskey=S
 blockedpluginsMessage.searchButton.label=Aktualizuj wtyczki…
-blockedpluginsMessage.searchButton.accesskey=U
+blockedpluginsMessage.searchButton.accesskey=A
 
 popupWarning=Program %S nie pozwolił tej witrynie na otwieranie wyskakujących okien.
 popupWarningMultiple=Program %S nie pozwolił tej witrynie na otwarcie %S wyskakujących okien.
@@ -16,11 +16,11 @@ popupWarningButton.accesskey=P
 xpinstallHostNotAvailable=nieznany host
 xpinstallPromptWarning=Program %S nie pozwolił tej witrynie (%S) zapytać o zgodę na instalację oprogramowania.
 xpinstallPromptInstallButton=Zainstaluj oprogramowanie…
-xpinstallPromptInstallButton.accesskey=I
+xpinstallPromptInstallButton.accesskey=o
 xpinstallDisabledMessageLocked=Instalacja oprogramowania została wyłączona przez administratora systemu.
 xpinstallDisabledMessage=Instalacja oprogramowania jest obecnie wyłączona. Naciśnij Włącz i spróbuj ponownie.
 xpinstallDisabledButton=Włącz
-xpinstallDisabledButton.accesskey=n
+xpinstallDisabledButton.accesskey=c
 
 # Geolocation UI
 # LOCALIZATION NOTE (exactLocation): This does not have to be an exact value,
@@ -29,6 +29,6 @@ xpinstallDisabledButton.accesskey=n
 #
 geolocation.requestMessage=%S chce poznać położenie geograficzne użytkownika. Przekaż:
 geolocation.exactLocation.label=dokładne położenie (w promieniu 3 m)
-geolocation.exactLocation.accesskey=E
+geolocation.exactLocation.accesskey=d
 geolocation.nothingLocation.label=Nie przekazuj
-geolocation.nothingLocation.accesskey=o
+geolocation.nothingLocation.accesskey=N
