--- a/pl/suite/chrome/mailnews/pref/replicationProgress.properties
+++ b/pl/suite/chrome/mailnews/pref/replicationProgress.properties
@@ -46,6 +46,6 @@ replicationCancelled=Replikacja anulowana
 currentCount=Replikowanie pozycji katalogu: %S
 
 downloadButton=Pobierz teraz
-downloadButton.accesskey=D
+downloadButton.accesskey=P
 cancelDownloadButton=Anuluj pobieranie
-cancelDownloadButton.accesskey=C
+cancelDownloadButton.accesskey=A
