--- a/pl/suite/chrome/mailnews/search.properties
+++ b/pl/suite/chrome/mailnews/search.properties
@@ -17,8 +17,8 @@ searchSuccessMessages=Liczba wiadomości spełniających kryteria wyszukiwania: 
 searchFailureMessage=Wyszukiwany ciąg nie został znaleziony
 labelForStopButton=Zatrzymaj
 labelForSearchButton=Znajdź
-labelForStopButton.accesskey=S
-labelForSearchButton.accesskey=S
+labelForStopButton.accesskey=Z
+labelForSearchButton.accesskey=Z
 
 moreButtonTooltipText=Dodaj nową regułę
 lessButtonTooltipText=Usuń tę regułę
