--- a/fr/mail/chrome/messenger/activity.properties
+++ b/fr/mail/chrome/messenger/activity.properties
@@ -23,3 +23,36 @@ sentMessageTo=Message envoyé à %S
 failedToSendMessage=Échec d'envoi d'un message
 # LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
 failedToSendMessageTo=Échec d'envoi d'un message à %S
+
+# LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
+# Place the word %1$S in your translation where the number of the message being downloaded should appear.
+# Place the word %2$S in your translation where the total number of pending messages should appear.
+# Place the word %3$S in your translation where the name of the folder being processed should appear.
+autosyncProcessProgress=Téléchargement du message %1$S sur %2$S dans %3$S
+# LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
+autosyncProcessDisplayText=Mise à jour du dossier %S
+# LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
+autosyncEventDisplayText=%S est à jour
+# LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
+autosyncEventStatusText=Nombre total de messages téléchargés : %S
+autosyncEventStatusTextNoMsgs=Aucun message téléchargé
+# LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
+autosyncContextDisplayText=Synchronisation : %S
+
+# Message actions that show up in activity manager
+# LOCALIZATION NOTE (deletedMessages): #1 number of messages
+deletedMessages=#1 message supprimé;#1 messages supprimés
+# LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
+movedMessages=#1 message déplacé de #2 vers #3;#1 messages déplacés de #2 vers #3
+# LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
+copiedMessages=#1 message copié de #2 vers #3;#1 messages copiés de #2 vers #3
+# LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
+fromServerToServer=de #1 vers #2
+# LOCALIZATION NOTE (deletedFolder): #1 folder name
+deletedFolder=Dossier #1 supprimé
+# LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
+movedFolder=Dossier #1 déplacé dans le dossier #2
+# LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
+copiedFolder=Dossier #1 copié dans le dossier #2
+# LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
+renamedFolder=Dossier #1 renommé en #2
