--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -423,3 +423,22 @@ emptyTrashDontAsk=Ne plus redemander.
 # junkCommands.js
 junkAnalysisPercentComplete=Analyse des messages indésirables terminée à %S
 processingJunkMessages=Traitement des messages indésirables en cours
+
+# second person direct object pronoun; used in the collapsed header view if
+# the user is in the To or Cc field of a message
+headerFieldYou=Vous-même
+
+# The what's new tab title, shown on version update
+whatsNew=Quoi de neuf ?
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Contact
+glodaSearch_results_why_subject=Sujet
+glodaSearch_results_why_body=Corps du message
+glodaSearch_results_why_attachment=Pièce jointe
