--- a/fy-NL/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/fy-NL/mail/chrome/messenger/addressbook/addressBook.properties
@@ -57,8 +57,8 @@ editVCardTitleWithDisplayName=vCard fan %S bewurkje
 
 ## LOCALIZATION NOTE (cardRequiredDataMissingMessage):  do not localize \n
 cardRequiredDataMissingMessage=Jo moatte op syn minst ien fan de folgjende items ynfolje:\nE-mailadres, Foarnamme, Achternamme, Werjeftenamme, Organisaasje.
-cardRequiredDataMissingTitle=Fereaske ynformaasje \u00FBntbrekt
-incorrectEmailAddressFormatMessage=It e-mailadres moat de foarm br\u00FBker@host.nl hawwe.
+cardRequiredDataMissingTitle=Fereaske ynformaasje ûntbrekt
+incorrectEmailAddressFormatMessage=It e-mailadres moat de foarm brûker@host.nl hawwe.
 incorrectEmailAddressFormatTitle=Ferkeard e-mailadresformaat
 
 viewListTitle=Mailinglist: %S
@@ -69,19 +69,19 @@ mailListNameExistsMessage=In mailinglist mei dizze namme bestiet al. Kies in oar
 confirmDeleteMailingListTitle=Mailinglist fuortsmite
 confirmDeleteAddressbookTitle=Adresboek fuortsmite
 confirmDeleteAddressbook=Binne jo der wis fan dat jo dit adresboek fuortsmite wolle?
-confirmDeleteCollectionAddressbook=As dit adresboek fuortsmite is sil %S net langer adressen sammelje. Binne jo der wis fan dat jo dit adresboek fuortsmite wolle?
+confirmDeleteCollectionAddressbook=As dit adresboek fuortsmiten is sil %S net langer adressen sammelje. Binne jo der wis fan dat jo dit adresboek fuortsmite wolle?
 confirmDeleteMailingList=Binne jo der wis fan dat jo dizze mailinglist fuortsmite wolle?
 confirmDeleteListsAndContacts=Binne jo der wis fan dat jo dizze kontakten en mailinglisten fuortsmite wolle?
 confirmDeleteMailingLists=Binne jo der wis fan dat jo dizze mailinglisten fuortsmite wolle?
 
 propertyPrimaryEmail=E-mail
-propertyListName=Listnaam
+propertyListName=Listnamme
 propertySecondaryEmail=Alternative e-mail
 propertyScreenName=Skermnamme
 propertyNickname=Bynamme
 propertyDisplayName=Werjeftenamme
 propertyWork=Wurk
-propertyHome=Th\u00FAs
+propertyHome=Thús
 propertyFax=Faks
 propertyCellular=Mobyl
 propertyPager=Piper
@@ -124,23 +124,23 @@ ldap_2.servers.osx.description=Mac OS X adresboek
 # status bar stuff
 ## LOCALIZATION NOTE (totalCardStatus): 
 ## %1$S is address book name, %2$S is card count
-totalContactStatus=Totale oantal kontakten yn %1$S: %2$S
+totalContactStatus=Totaal oantal kontakten yn %1$S: %2$S
 ## LOCALIZATION NOTE (matchesFound):  do not localize %S
-noMatchFound=Gjin oerienkomsten f\u00FBn
-matchFound=1 oerienkomst f\u00FBn
-matchesFound=%S oerienkomsten f\u00FBn
+noMatchFound=Gjin oerienkomsten fûn
+matchFound=1 oerienkomst fûn
+matchesFound=%S oerienkomsten fûn
 
-cardsCopied=%S kaarten kopieard
-cardCopied=1 kaart kopieard
+cardsCopied=%S kaarten kopiearre
+cardCopied=1 kaart kopiearre
 cardsMoved=%S kaarten ferpleatst
 cardMoved=1 kaart ferpleatst
 
 # LDAP directory stuff
 invalidName=Fier in jildige namme yn.
 invalidHostname=Fier in jildige hostnamme yn.
-invalidPortNumber=Fier in jildich poarten\u00FBmer yn.
-invalidResults=Fier in jildich n\u00FBmer yn yn it resultaatfjild.
-abReplicationOfflineWarning=Jo moatte online w\u00EAze om in LDAP-replikaasje \u00FAt te fieren.
+invalidPortNumber=Fier in jildich poartenûmer yn.
+invalidResults=Fier in jildich nûmer yn yn it resultaatfjild.
+abReplicationOfflineWarning=Jo moatte online wêze om in LDAP-replikaasje út te fieren.
 abReplicationSaveSettings=Ynstellings moatte bewarre wurde foardat in map ynladen wurde kin.
 
 # For importing / exporting
@@ -150,21 +150,21 @@ CSVFiles=Kommaskieden
 TABFiles=Tabskieden
 failedToExportTitle=Eksportearjen mislearre
 failedToExportMessageNoDeviceSpace=Adresboek eksportearjen mislearre, gjin romte oer op apparaat.
-failedToExportMessageFileAccessDenied=Adresboek eksportearjen mislearre, tagong ta best\u00E2n wegere.
+failedToExportMessageFileAccessDenied=Adresboek eksportearjen mislearre, tagong ta bestân wegere.
 
 # For getting authDN for replication using dlg box
 AuthDlgTitle=Adresboek-LDAP-replikaasje
-AuthDlgDesc=Foar tagong ta de maptsjinner, fier br\u00FBkersnamme en wachtwurd yn.
+AuthDlgDesc=Foar tagong ta de maptsjinner, fier brûkersnamme en wachtwurd yn.
 
 # LOCALIZATION NOTE(joinMeInThisChat)
 # use + for spaces
 joinMeInThisChat=Beselskipje+my+yn+dizze+chat.
 
 # For printing
-headingHome=Th\u00FAs
+headingHome=Thús
 headingWork=Wurk
-headingOther=Oara
-headingPhone=Telefoon
+headingOther=Oars
+headingPhone=Telefoan
 headingDescription=Beskriuwing
 headingAddresses=Adressen
 
@@ -173,9 +173,9 @@ newAddressBookTitle=Nij adresboek
 renameAddressBookTitle=Adresboekeigenskippen
 
 # For corrupt .mab files
-corruptMabFileTitle=Stikken adresboekbest\u00E2n
-corruptMabFileAlert=Ien fan jo adresboekbestannen (%1$S-best\u00E2n) koe net l\u00EAzen wurde. Der wurdt in %2$S-best\u00E2n oanmakke en in resservekopy fan it \u00E2lde best\u00E2n, mei de namme %3$S, wurdt oanmakke yn deselde map.
+corruptMabFileTitle=Stikken adresboekbestân
+corruptMabFileAlert=Ien fan jo adresboekbestannen (%1$S-bestân) koe net lêzen wurde. Der wurdt in %2$S-bestân oanmakke en in reservekopy fan it âlde bestân, mei de namme %3$S, wurdt oanmakke yn deselde map.
 
 # For locked .mab files
-lockedMabFileTitle=Laden fan adresboekbest\u00E2n net slagge
-lockedMabFileAlert=Laden fan adresboekbest\u00E2n %S is net slagge. It is mooglik in allinnich-te-l\u00EAzen-best\u00E2n, of it wurdt br\u00FBkt troch in oare tapassing. Besykje it letter ris wer.
+lockedMabFileTitle=Laden fan adresboekbestân net slagge
+lockedMabFileAlert=Laden fan adresboekbestân %S is net slagge. It is mooglik in allinnich-te-lêzen-bestân, of it wurdt brûkt troch in oare tapassing. Besykje it letter ris wer.
