--- a/fy-NL/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
+++ b/fy-NL/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
@@ -69,7 +69,7 @@
 ##      %1$S is the error code itself, %2$S is an LDAP SDK error message from
 ##      chrome://mozldap/locale/ldap.properties, and %3$S is a hint relating
 ##      to that specific error, found in this file.
-errorAlertFormat=Flatetkoade %1$S: %2$S\n\n %3$S
+errorAlertFormat=Flaterkoade %1$S: %2$S\n\n %3$S
 
 ## The following errors are for error codes other than LDAP-specific ones.
 ## Someday mozilla will actually have a system for mapping nsresults to
@@ -78,7 +78,7 @@ errorAlertFormat=Flatetkoade %1$S: %2$S\n\n %3$S
 
 ## @name HOST_NOT_FOUND
 ## @loc none
-5000=Host net f\u00FBn
+5000=Host net fûn
 
 ## @name GENERIC_ERROR
 ## @loc none
@@ -99,11 +99,11 @@ errorAlertFormat=Flatetkoade %1$S: %2$S\n\n %3$S
 
 ## @name INVALID_SYNTAX_HINT
 ## @loc none
-10021=Sjoch of it sykfilter goed stiet en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of it sykfilter goed stiet, kies Opsjes yn it menu Ekstra, Opstelle en d\u00EArnei Adressearring. Klik op Mappen bewurkje en selektearje de br\u00FBkte LDAP-tsjinner. Klik op Bewurkje en d\u00EArnei op Avansearre om it sykfilter sjen te litten.
+10021=Sjoch oft it sykfilter goed stiet en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean oft it sykfilter goed stiet, kies Opsjes yn it menu Ekstra, Opstelle en dêrnei Adressearring. Klik op Mappen bewurkje en selektearje de brûkte LDAP-tsjinner. Klik op Bewurkje en dêrnei op Avansearre om it sykfilter sjen te litten.
 
 ## @name NO_SUCH_OBJECT_HINT
 ## @loc none
-10032=Gean nei of de basis-DN goed is en besykje it d\u00EArnei noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of de basis-DN goed is, kies Opsjes yn it menu Ekstra, Opstelle en d\u00EArnei Adressearring. Klik op Mappen bewurkje en selektearje de br\u00FBkte LDAP-tsjinner. Klik op Bewurkje om  om de basis-DN sjen te litten.
+10032=Om nei te gean oft de basis-DN goed is en besykje it dêrnei noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean oft de basis-DN goed is, kies Opsjes yn it menu Ekstra, Opstelle en dêrnei Adressearring. Klik op Mappen bewurkje en selektearje de brûkte LDAP-tsjinner. Klik op Bewurkje om de basis-DN sjen te litten.
 
 ## @name BUSY_HINT
 ## @loc none
@@ -111,7 +111,7 @@ errorAlertFormat=Flatetkoade %1$S: %2$S\n\n %3$S
 
 ## @name SERVER_DOWN_HINT
 ## @loc none
-10081=Gean nei of de hostnamme en it poarten\u00FBmer goed binne en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of de hostnamme en it poarten\u00FBmer goed binne, kies Opsjes yn it menu Extra, Opstelle en d\u00EArnei Adressearring. Klik op Mappen bewurkje en selektearje de br\u00FBkte LDAP-tsjinner. Klik op Bewurkje om de hostnamme en it poarten\u00FBmer sjen te litten.
+10081=Gean nei oft de hostnamme en it poartenûmer goed binne en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of de hostnamme en it poartenûmer goed binne, kies Opsjes yn it menu Extra, Opstelle en dêrnei Adressearring. Klik op Mappen bewurkje en selektearje de brûkte LDAP-tsjinner. Klik op Bewurkje om de hostnamme en it poartenûmer sjen te litten.
 
 ## @name TIMEOUT_HINT
 ## @loc none
@@ -119,19 +119,19 @@ errorAlertFormat=Flatetkoade %1$S: %2$S\n\n %3$S
 
 ## @name FILTER_ERROR_HINT
 ## @loc none
-10087=Gean nei oft it sykfilter goed stiet en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of it sykfilter goed stiet, kies Opsjes yn it menu Ekstra, Opstelle en d\u00EArnei Adressearring. Klik op Mappen bewurkje en selektearje de br\u00FBkte LDAP-tsjinner. Klik op Bewurkje en d\u00EArnei op Avansearre om it sykfilter sjen te litten.
+10087=Gean nei oft it sykfilter goed stiet en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean oft it sykfilter goed stiet, kies Opsjes yn it menu Ekstra, Opstelle en dêrnei Adressearring. Klik op Mappen bewurkje en selektearje de brûkte LDAP-tsjinner. Klik op Bewurkje en dêrnei op Avansearre om it sykfilter sjen te litten.
 
 ## @name NO_MEMORY_HINT
 ## @loc none
-10090=Sl\u00FAt in pear oare finsters en/of tapassings en besykje it noch ris.
+10090=Slút in pear oare finsters en/of tapassings en besykje it noch ris.
 
 ## @name CONNECT_ERROR_HINT
 ## @loc none
-10091=Gean nei of de hostnamme en it poarten\u00FBmer goed binne en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of de hostnamme en it poarten\u00FBmer goed binne, kies Opsjes yn it menu Ekstra, Opstelle en d\u00EArnei Adressearring. Klik op Mappen bewurkje en selektearje de br\u00FBkte LDAP-tsjinner. Klik op Bewurkje om de hostnamme en it poarten\u00FBmer sjen te litten.
+10091=Gean nei oft de hostnamme en it poartenûmer goed binne en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean oft de hostnamme en it poartenûmer goed binne, kies Opsjes yn it menu Ekstra, Opstelle en dêrnei Adressearring. Klik op Mappen bewurkje en selektearje de brûkte LDAP-tsjinner. Klik op Bewurkje om de hostnamme en it poartenûmer sjen te litten.
 
 ## @name HOST_NOT_FOUND_HINT
 ## @loc none
-15000=Gean nei of de hostnamme goed is en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean of de hostnamme goed is kies Opsjes yn it menu Ekstra, Opstelle en d\u00EArnei Adressearring. Klik op Mappen bewurkje en selektearje de br\u00FBkte LDAP-tsjinner. Klik op Bewurkje om de hostnamme sjen te litten.
+15000=Gean nei oft de hostnamme goed is en besykje it noch ris, of nim oars kontakt op mei de systeembehearder. Om nei te gean oft de hostnamme goed is kies Opsjes yn it menu Ekstra, Opstelle en dêrnei Adressearring. Klik op Mappen bewurkje en selektearje de brûkte LDAP-tsjinner. Klik op Bewurkje om de hostnamme sjen te litten.
 
 ## @name GENERIC_HINT
 ## @loc none
