--- a/nb-NO/mail/chrome/messenger/activity.properties
+++ b/nb-NO/mail/chrome/messenger/activity.properties
@@ -1,12 +1,5 @@
-# LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
-# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-seconds=sekund;sekunder
-minutes=minutt;minutter
-hours=time;timer
-days=dag;dager
-
 # Status Text
-paused=Pause.
+paused2=Pause
 processing=Behandler
 notStarted=Ikke startet
 failed=Feilet
@@ -14,10 +7,52 @@ waitingForInput=Venter på inndata
 waitingForRetry=Venter på nytt forsøk
 completed=Fullført
 canceled=Avbrutt
-cannotPause=Denne aktiviteten kan ikke settes i pause
-autoRetry=Prøv igjen om %S sekunder
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=I går
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#1 #2
+
+# Send Message
+sendingMessage=Sender melding
+# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
+sendingMessageTo=Sender melding til %S
+sentMessage=Melding sendt
+# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
+sentMessageTo=Melding sendt til %S
+failedToSendMessage=Klarte ikke sende melding
+# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
+failedToSendMessageTo=Klarte ikke sende melding til %S
+
+# LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
+# Place the word %1$S in your translation where the number of the message being downloaded should appear.
+# Place the word %2$S in your translation where the total number of pending messages should appear.
+# Place the word %3$S in your translation where the name of the folder being processed should appear.
+autosyncProcessProgress=Laster ned %1$S av %2$S i %3$S
+# LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
+autosyncProcessDisplayText=Oppdaterer mappen %S
+# LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
+autosyncEventDisplayText=%S er oppdatert
+# LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
+autosyncEventStatusText=Antall meldinger lastet ned: %S
+autosyncEventStatusTextNoMsgs=Ingen meldinger lastet ned
+# LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
+autosyncContextDisplayText=Synkroniserer: %S
+
+# Message actions that show up in activity manager
+# LOCALIZATION NOTE (deletedMessages): #1 number of messages
+deletedMessages=Slettet #1 melding;Slettet #1 meldinger
+# LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
+movedMessages=Flyttet #1 melding fra #2 til #3;Flyttet #1 meldinger fra #2 til #3
+# LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
+copiedMessages=Kopierte #1 melding fra #2 til #3;Kopierte #1 meldinger fra #2 til #3
+# LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
+fromServerToServer=fra #1 til #2
+# LOCALIZATION NOTE (deletedFolder): #1 folder name
+deletedFolder=Slettet mappen #1
+# LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
+movedFolder=Flyttet mappen #1 til #2
+# LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
+copiedFolder=Kopierte mappen #1 til #2
+# LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
+renamedFolder=Endret navn på mappen #1 til #2
