--- a/nl/suite/chrome/mailnews/messenger.properties
+++ b/nl/suite/chrome/mailnews/messenger.properties
@@ -339,6 +339,16 @@ fromSearchCriteria = Onderwerp of afzender bevat:
 biffNotification_message = heeft %1$S nieuw bericht
 biffNotification_messages = heeft %1$S nieuwe berichten
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nieuw bericht van %2$S.
+macBiffNotification_messages=%1$S nieuwe berichten van %2$S.
+macBiffNotification_messages_extra=%1$S nieuwe berichten van %2$S en %3$S meer.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree = %S van %S KB gebruikt
 quotaPercentUsed = %S%% vol
