L10n for: Bug 460287 - "Growl notifications should give more info"; suite part

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -333,6 +333,16 @@ fromSearchCriteria=Temat lub nadawca zawiera:
 biffNotification_message=Odebrano %1$S nową wiadomość
 biffNotification_messages=Odebrano %1$S nowe wiadomości
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nowa wiadomość od %2$S.
+macBiffNotification_messages=%1$S nowych wiadomości od %2$S.
+macBiffNotification_messages_extra=%1$S nowych wiadomości od %2$S oraz kolejne %3$S wiadomości.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=Zajęte %S z %S KB
 quotaPercentUsed=Zajęte %S%%
