final suite sync with Firefox

--- a/pl/suite/chrome/browser/pageInfo.properties
+++ b/pl/suite/chrome/browser/pageInfo.properties
@@ -59,8 +59,8 @@ mediaSize=%Spx \u00D7 %Spx
 mediaSelectFolder=Wybierz folder do zapisu obrazków
 mediaBlockImage=Blokuj obrazki z witryny %S
 
-generalQuirksMode=Tryb zgodności
-generalStrictMode=Tryb ścisłej zgodności
+generalQuirksMode=Tryb wstecznej zgodności
+generalStrictMode=Tryb standardów
 generalNotCached=Nie jest buforowany
 generalDiskCache=Pamięć podręczna dysku
 generalMemoryCache=Pamięć podręczna RAM
