Bug 473815 - Improve diagnostics for malformed @font-face rules

--- a/fr/dom/chrome/layout/css.properties
+++ b/fr/dom/chrome/layout/css.properties
@@ -133,5 +133,7 @@ PEMQExpectedExpressionStart=« ( » attendue au début de l'expression de requ
 PEMQExpressionEOF=Contenus d'expression de requête de média
 PEMQExpectedFeatureName=Nom de fonctionnalité média attendue, mais « %1$S » trouvé.
 PEMQExpectedFeatureNameEnd=« : » ou « ) » attendu après le nom d'une fonctionnalité média, mais « %1$S » trouvé.
+PEMQNoMinMaxWithoutValue=Les fonctionnalités média avec min- ou max- doivent avoir une valeur.
 PEMQExpectedFeatureValue=Valeur invalide trouvée pour la fonctionnalité de média.
-PEMQNoMinMaxWithoutValue=Les fonctionnalités média avec min- ou max- doivent avoir uen valeur.
+PEBadFontBlockStart=« { » attendu pour débuter une règle @font-face, mais « %1$S » trouvérule but found '%1$S'.
+PEBadFontBlockEnd=« } » attendu pour terminer une règle @font-face, mais « %1$S » trouvérule but found '%1$S'.
