--- a/fr/browser/chrome/browser/preferences/preferences.properties
+++ b/fr/browser/chrome/browser/preferences/preferences.properties
@@ -79,7 +79,7 @@ hostColon=Hôte :
 domainColon=Domaine :
 forSecureOnly=Connexions chiffrées uniquement
 forAnyConnection=Tout type de connexion
-AtEndOfSession = à la fin de la session
+expireAtEndOfSession=À la fin de la session
 can=Autoriser
 canSession=Autoriser pour la session
 cannot=Bloquer
