--- a/fr/toolkit/chrome/cookie/cookieAcceptDialog.properties
+++ b/fr/toolkit/chrome/cookie/cookieAcceptDialog.properties
@@ -2,7 +2,7 @@ hostColon=Hôte :
 domainColon=Domaine :
 forSecureOnly=Connexions chiffrées uniquement
 forAnyConnection=Tout type de connexion
-atEndOfSession=à la fin de la session
+expireAtEndOfSession=À la fin de la session
 
 showDetails=Afficher les détails
 hideDetails=Masquer les détails
