--- a/fy-NL/browser/chrome/browser/preferences/preferences.properties
+++ b/fy-NL/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Host:
 domainColon=Domein:
 forSecureOnly=Allinnich feilige ferbinings
 forAnyConnection=Alle soarten ferbinings
-AtEndOfSession= oan it ein fan de sitting
+expireAtEndOfSession=Oan it ein fan de sitting
 can=Tastean
 canSession=Tastean foar sitting
 cannot=Blokkearje
