--- a/sk/browser/chrome/browser/preferences/preferences.properties
+++ b/sk/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Server:
 domainColon=Doména:
 forSecureOnly=Iba zašifrované pripojenia
 forAnyConnection=Všetky typy pripojenia
-AtEndOfSession=na konci relácie
+expireAtEndOfSession=Na konci relácie
 can=Povoliť
 canSession=Povoliť pre reláciu
 cannot=Zakázať
