de strings for bug 473815 and backout the string of bug 474655

--- a/de/dom/chrome/layout/css.properties
+++ b/de/dom/chrome/layout/css.properties
@@ -37,8 +37,6 @@
 MimeNotCss=Stylesheet %1$S wurde nicht geladen, weil sein MIME-Typ, "%2$S", nicht "text/css" ist.
 MimeNotCssWarn=Stylesheet %1$S wurde geladen, obwohl sein MIME-Typ, "%2$S", nicht "text/css" ist.
 
-UseOfGetPropertyCSSValueWarning=getPropertyCSSValue() sollte nicht mehr verwendet werden.  Um Ihren Code zu aktualisieren, verwenden Sie stattdessen getPropertyValue().
-
 PEUnexpEOF2=Unerwartetes Dateiende beim Suchen nach %1$S.
 PEParseRuleWSOnly=Nur-Leeraum-String angegeben, um als Regel verarbeitet zu werden.
 PEDeclDropped=Deklaration ignoriert.
@@ -137,3 +135,5 @@ PEMQExpectedFeatureName=Name einer Medienfunktion erwartet, aber '%1$S' gefunden
 PEMQExpectedFeatureNameEnd=':' oder ')' nach dem Name der Medienfunktion erwartet, aber '%1$S' gefunden.
 PEMQNoMinMaxWithoutValue=Medienfunktionen mit min- oder max- müssen einen Wert haben.
 PEMQExpectedFeatureValue=Ungültiger Wert für eine Medienfunktion gefunden.
+PEBadFontBlockStart='{' als Beginn der @font-face-Regel erwartet, aber '%1$S' gefunden.
+PEBadFontBlockEnd='{' als Ende der @font-face-Regel erwartet, aber '%1$S' gefunden.
