L10n for bug 471989 - atEndOfSession define in cookieAcceptDialog.properties should be capitalized.

--- a/sv-SE/browser/chrome/browser/preferences/preferences.properties
+++ b/sv-SE/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Värd:
 domainColon=Domän:
 forSecureOnly=Endast krypterade förbindelser
 forAnyConnection=Alla typer av förbindelser
-AtEndOfSession = vid sessionens slut
+expireAtEndOfSession=Vid sessionens slut
 can=Tillåt
 canSession=Tillåt för sessionen
 cannot=Blockera
