--- a/pl/calendar/updater/updater.ini
+++ b/pl/calendar/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Aktualizacja oprogramowania
+TitleText=Aktualizacja programu %MOZ_APP_DISPLAYNAME%
 InfoText=%MOZ_APP_DISPLAYNAME% instaluje aktualizacje i uruchomi się za chwilę…
