--- a/ca/mail/chrome/messenger/activity.properties
+++ b/ca/mail/chrome/messenger/activity.properties
@@ -1,12 +1,5 @@
-# LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
-# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-seconds=segon;segons
-minutes=minut;minuts
-hours=hora;hores
-days=dia;dies
-
 # Status Text
-paused=Pausat.
+paused2=Pausat
 processing=S'està processant
 notStarted=No ha començat
 failed=Ha fallat
@@ -14,10 +7,57 @@ waitingForInput=S'està esperant que s'introdueixin dades
 waitingForRetry=S'està esperant que es torni a intentar
 completed=Completada
 canceled=Cancel·lada
-cannotPause=Aquesta activitat no es pot pausar
-autoRetry=Es tornarà a intentar d'aquí %S segons
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=Ahir
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2 #1
+
+# Send Message
+sendingMessage=S'està enviant el missatge
+# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
+sendingMessageTo=S'està enviant el missatge a en/la %S
+sentMessage=El missatge s'ha enviat
+# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
+sentMessageTo=El missatge s'ha enviat a en/la %S
+failedToSendMessage=L'enviament del missatge ha fallat
+# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
+failedToSendMessageTo=L'enviament del missatge a en/la %S ha fallat
+
+# LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
+# Place the word %1$S in your translation where the number of the message being downloaded should appear.
+# Place the word %2$S in your translation where the total number of pending messages should appear.
+# Place the word %3$S in your translation where the name of the folder being processed should appear.
+autosyncProcessProgress=S'està baixant %1$S de %2$S a %3$S
+# LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
+autosyncProcessDisplayText=S'està actualitzant la carpeta %S
+# LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
+autosyncEventDisplayText=%S està actualitzat
+# LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
+autosyncEventStatusText=Total de missatges baixats: %S
+autosyncEventStatusTextNoMsgs=No s'ha baixat cap missatge
+# LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
+autosyncContextDisplayText=S'està sincronitzant: %S
+
+# Message actions that show up in activity manager
+# LOCALIZATION NOTE (deletedMessages): #1 number of messages
+deletedMessages=S'ha esborrat #1 missatge;S'han esborrat #1 missatges
+# LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
+movedMessages=S'ha mogut #1 missatge de #2 a #3;S'han mogut #1 missatges de #2 a #3
+# LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
+copiedMessages=S'ha copiat #1 missatge de #2 a #3;S'han copiat #1 missatges de #2 a #3
+# LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
+fromServerToServer=de #1 a #2
+# LOCALIZATION NOTE (deletedFolder): #1 folder name
+deletedFolder=S'ha esborrat la carpeta #1
+# LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
+movedFolder=S'ha mogut la carpeta #1 dins la carpeta #2
+# LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
+copiedFolder=S'ha copiat la carpeta #1 dins de la carpeta #2
+# LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
+renamedFolder=S'ha canviat el nom de la carpeta #1 a #2
+
+
+cannotPause=Aquesta activitat no es pot pausar
+autoRetry=Es tornarà a intentar d'aquí %S segons
+
