--- a/ca/mail/chrome/messenger/messenger.properties
+++ b/ca/mail/chrome/messenger/messenger.properties
@@ -287,6 +287,16 @@ biffNotification_messages=teniu %1$S missatges nous
 newBiffNotification_message=%1$S té %2$S nou missatge
 newBiffNotification_messages=%1$S té %2$S nous missatges
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S missatge nou de %2$S.
+macBiffNotification_messages=%1$S missatges nous de %2$S.
+macBiffNotification_messages_extra=%1$S missatges nous de %2$S i %3$S més.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 quotaUsedFree=%S de %S KB usats
 quotaPercentUsed=%S%% ple
 # for quota in main window (commandglue.js)
@@ -380,3 +390,16 @@ headerFieldYou=Vós mateix
 
 # The what's new tab title, shown on version update
 whatsNew=Novetats
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Contacte
+glodaSearch_results_why_subject=Assumpte
+glodaSearch_results_why_body=Cos
+glodaSearch_results_why_attachment=Adjunció
+
