--- a/ca/suite/chrome/mailnews/messenger.properties
+++ b/ca/suite/chrome/mailnews/messenger.properties
@@ -275,6 +275,16 @@ fromSearchCriteria=L'assumpte o el remitent contenen:
 biffNotification_message=teniu %1$S missatge nou
 biffNotification_messages=teniu %1$S missatges nous
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S missatge nou de %2$S.
+macBiffNotification_messages=%1$S missatges nous de %2$S.
+macBiffNotification_messages_extra=%1$S missatges nous de %2$S i %3$S més.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 quotaUsedFree=%S de %S KB usats
 quotaPercentUsed=%S%% ple
 
