--- a/ca/suite/updater/updater.ini
+++ b/ca/suite/updater/updater.ini
@@ -1,4 +1,5 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Actualització del programari
-Info=S'estan instaŀlant les actualitzacions i s'iniciarà en breus moments.
+TitleText=Actualització del %MOZ_APP_DISPLAYNAME%
+InfoText=El %MOZ_APP_DISPLAYNAME% està instal·lant les actualitzacions i s'iniciarà en breus moments.
+
