Bug 475385 - atEndOfSession define in cookieAcceptDialog.properties should be capitalize (SeaMonkey port)

--- a/fr/suite/chrome/common/permissions/cookieViewer.properties
+++ b/fr/suite/chrome/common/permissions/cookieViewer.properties
@@ -46,7 +46,7 @@ hostColon=Hôte :
 domainColon=Domaine :
 forSecureOnly=Connexions chiffrées seulement
 forAnyConnection=Tout type de connexion
-AtEndOfSession = à la fin de la session
+expireAtEndOfSession=À la fin de la session
 deleteAllCookies=Voulez-vous vraiment supprimer tous les cookies ?
 deleteAllCookiesTitle=Supprimer tous les cookies
 deleteAllCookiesYes=&Supprimer
