L10n for: Bug 475385 - atEndOfSession define in cookieAcceptDialog.properties should be capitalize (SeaMonkey port)

--- a/pl/suite/chrome/common/permissions/cookieViewer.properties
+++ b/pl/suite/chrome/common/permissions/cookieViewer.properties
@@ -46,7 +46,7 @@ hostColon=Host:
 domainColon=Domena:
 forSecureOnly=Tylko podczas połączenia szyfrowanego
 forAnyConnection=Podczas każdego typu połączenia
-AtEndOfSession=pod koniec sesji
+expireAtEndOfSession=Na końcu sesji
 deleteAllCookies=Czy na pewno usunąć wszystkie ciasteczka?
 deleteAllCookiesTitle=Usuń wszystkie ciasteczka
 deleteAllCookiesYes=Usuń
