--- a/ro/mail/chrome/messenger/aboutRights.properties
+++ b/ro/mail/chrome/messenger/aboutRights.properties
@@ -1,5 +1,5 @@
 aboutRightsTitle=Despre drepturile dumneavoastră
 buttonLabel=Cunoașteți-vă drepturile…
-buttonAccessKey=K
+buttonAccessKey=d
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
 notifyText=%S este software liber și deschis oferit de fundația non-profit Mozilla Foundation.
