--- a/ro/mail/chrome/messenger/imapMsgs.properties
+++ b/ro/mail/chrome/messenger/imapMsgs.properties
@@ -42,12 +42,12 @@
 # Status - opening folder
 ## @name IMAP_STATUS_SELECTING_MAILBOX
 ## @loc None
-5000=Deschid dosarul...
+5000=Deschid dosarul…
 
 # Status - create folder
 ## @name IMAP_STATUS_CREATING_MAILBOX
 ## @loc None
-5001=Creez dosarul...
+5001=Creez dosarul…
 
 # Status - deleting a folder
 ## @name IMAP_STATUS_DELETING_MAILBOX
@@ -55,7 +55,7 @@
 # LOCALIZATION NOTE (Error 5002): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being deleted.
-5002=Șterg dosarul %S...
+5002=Șterg dosarul %S…
 
 # Status - renaming mailbox
 ## @name IMAP_STATUS_RENAMING_MAILBOX
@@ -63,12 +63,12 @@
 # LOCALIZATION NOTE (Error 5003): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being renamed.
-5003=Redenumesc dosarul %S...
+5003=Redenumesc dosarul %S…
 
 # Status - looking for mailboxes
 ## @name IMAP_STATUS_LOOKING_FOR_MAILBOX
 ## @loc None
-5004=Caut dosare...
+5004=Caut dosare…
 
 # Status - subscribing to mailbox
 ## @name IMAP_STATUS_SUBSCRIBE_TO_MAILBOX
@@ -76,7 +76,7 @@
 # LOCALIZATION NOTE (Error 5005): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being subscribed to.
-5005=Mă abonez la dosarul %S...
+5005=Mă abonez la dosarul %S…
 
 # Status - unsubscribing from mailbox
 ## @name IMAP_STATUS_UNSUBSCRIBE_MAILBOX
@@ -84,56 +84,56 @@
 # LOCALIZATION NOTE (Error 5005): The "%S" below should not be translated.
 # Instead, insert "%S" in your translation where you wish to display the name
 # of the folder being unsubscribed from.
-5006=Mă dezabonez de la dosarul %S...
+5006=Mă dezabonez de la dosarul %S…
 
 # Status - searching imap folder
 ## @name IMAP_STATUS_SEARCH_MAILBOX
 ## @loc None
-5007=Caut dosarul...
+5007=Caut dosarul…
 
 # Status - getting message info
 ## @name IMAP_STATUS_MSG_INFO
 ## @loc None
-5008=Primesc informații mesaj...
+5008=Primesc informații mesaj…
 
 # Status - closing a folder
 ## @name IMAP_STATUS_CLOSE_MAILBOX
 ## @loc None
-5009=Închid dosarul...
+5009=Închid dosarul…
 
 # Status - compacting a folder
 ## @name IMAP_STATUS_EXPUNGING_MAILBOX
 ## @loc None
-5010=Compactez dosarul...
+5010=Compactez dosarul…
 
 # Status - logging out
 ## @name IMAP_STATUS_LOGGING_OUT
 ## @loc None
-5011=Fac logout...
+5011=Fac logout…
 
 # Status - checking server capabilities
 ## @name IMAP_STATUS_CHECK_COMPAT
 ## @loc None
-5012=Verific capabilitățile serverului de mail...
+5012=Verific capabilitățile serverului de mail…
 
 # Status - logging on
 ## @name IMAP_STATUS_SENDING_LOGIN
 ## @loc None
-5013=Se trimit informațiile de autentificare...
+5013=Se trimit informațiile de autentificare…
 
 # Status - auth logon
 ## @name IMAP_STATUS_SENDING_AUTH_LOGIN
 ## @loc None
-5014=Se trimit informațiile de autentificare...
+5014=Se trimit informațiile de autentificare…
 
 ## @name IMAP_DOWNLOADING_MESSAGE
 ## @loc None
-5015=Descarc mesajul...
+5015=Descarc mesajul…
 
 ## @name IMAP_STATUS_GETTING_NAMESPACE
 ## @loc None
 # LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Verific spațiul de nume IMAP...
+5020=Verific spațiul de nume IMAP…
 
 ## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
 ## @loc None
@@ -145,7 +145,7 @@
 
 ## @name IMAP_UPGRADE_CUSTOM
 ## @loc None
-5026=Vă rog alegeți dosarele la care doriți să vă abonați în fereastra Abonamente...
+5026=Vă rog alegeți dosarele la care doriți să vă abonați în fereastra Abonamente…
 
 ## @name IMAP_UPGRADE_SUCCESSFUL
 ## @loc None
@@ -154,15 +154,15 @@
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
-5029=Primesc ACL-ul pentru dosar...
+5029=Primesc ACL-ul pentru dosar…
 
 ## @name IMAP_GETTING_SERVER_INFO
 ## @loc None
-5030=Primesc informații configurație server...
+5030=Primesc informații configurație server…
 
 ## @name IMAP_GETTING_MAILBOX_INFO
 ## @loc None
-5031=Se obține configurația căsuței poștale...
+5031=Se obține configurația căsuței poștale…
 
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
@@ -198,41 +198,41 @@
 
 ## @name IMAP_DELETING_MESSAGES
 ## @loc None
-5038=Șterg mesaje...
+5038=Șterg mesaje…
 
 ## @name IMAP_DELETING_MESSAGE
 ## @loc None
-5039=Șterg mesajul...
+5039=Șterg mesajul…
 
 ## @name IMAP_MOVING_MESSAGES_TO
 ## @loc None
 # LOCALIZATION NOTE (Error 5040): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5040=Mut mesaje în %S...
+5040=Mut mesaje în %S…
 
 ## @name IMAP_MOVING_MESSAGE_TO
 ## @loc None
 # LOCALIZATION NOTE (Error 5041): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5041=Se mută mesajul în %S...
+5041=Se mută mesajul în %S…
 
 ## @name IMAP_COPYING_MESSAGES_TO
 ## @loc None
 # LOCALIZATION NOTE (Error 5042): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5042=Copiez mesaje în %S...
+5042=Copiez mesaje în %S…
 
 ## @name IMAP_COPYING_MESSAGE_TO
 ## @loc None
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5043=Copiez mesajul în %S...
+5043=Copiez mesajul în %S…
 
 ## @name IMAP_SELECTING_MAILBOX
 ## @loc None
 # LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
-5044=Deschid dosarul %S...
+5044=Deschid dosarul %S…
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
