--- a/ro/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/ro/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -50,10 +50,10 @@
 12503=Nu vă pot salva mesajul ca ciornă.
 
 ## @name NS_MSG_LOAD_ATTACHMNTS
-12504=Se încarcă anexele...
+12504=Se încarcă anexele…
 
 ## @name NS_MSG_LOAD_ATTACHMNT
-12505=Se încarcă anexa...
+12505=Se încarcă anexa…
 
 ## @name NS_MSG_COULDNT_OPEN_FCC_FOLDER
 12506=Nu se poate deschide dosarul „Mesaje trimise”. Vă rugăm să verificați că setările sunt corecte.
@@ -62,10 +62,10 @@
 12507=Nu pot posta la mai multe servere news. Ia mai încearcă.
 
 ## @name NS_MSG_ASSEMB_DONE_MSG
-12508=Asamblez mesajul...Gata
+12508=Asamblez mesajul…Gata
 
 ## @name NS_MSG_ASSEMBLING_MSG
-12509=Asamblez mesajul...
+12509=Asamblez mesajul…
 
 ## @name NS_MSG_NO_SENDER
 12510=Nu ați specificat expeditorul. Completați-vă adresa de email în setările contului.
@@ -95,10 +95,10 @@
 12520=Trimiterea mesajului a eșuat.
 
 ## @name SMTP_DELIV_MAIL
-12521=Expediez mail...
+12521=Expediez mail…
 
 ## @name SMTP_MESSAGE_SENT_WAITING_MAIL_REPLY
-12522=Mail: Mesaj trimis; aștept răspunsul...
+12522=Mail: Mesaj trimis; aștept răspunsul…
 
 ## @name SMTP_PROGRESS_MAILSENT
 12523=Trimitere cu succes
@@ -131,19 +131,19 @@
 12533=A apărut o problemă la includerea fișierului %.200s în mesaj. Continuați salvarea mesajului fără acest fișier?
 
 ## @name NS_MSG_ASSEMBLING_MESSAGE
-12534=Asamblez informații mail...
+12534=Asamblez informații mail…
 
 ## @name NS_MSG_GATHERING_ATTACHMENT
-12535=Anexez %s...
+12535=Anexez %s…
 
 ## @name NS_MSG_CREATING_MESSAGE
-12536=Creez mesajul...
+12536=Creez mesajul…
 
 ## @name NS_MSG_FAILURE_ON_OBJ_EMBED_WHILE_SENDING
 12537=A apărut o problemă la includerea fișierului %.200s în mesaj. Continuați trimiterea mesajului fără acest fișier?
 
 ## @name NS_MSG_START_COPY_MESSAGE
-12538=Copiez mesajul în dosarul %S...
+12538=Copiez mesajul în dosarul %S…
 
 ## @name NS_MSG_START_COPY_MESSAGE_COMPLETE
 12539=Copiere încheiată.
@@ -161,19 +161,19 @@
 12544=Introduceți parola pentru %S la %S:
 
 ## @name NS_SMTP_CONNECTING_TO_SERVER
-12545=Inițiez conexiunea cu serverul...
+12545=Inițiez conexiunea cu serverul…
 
 ## @name NS_MSG_SENDING_MESSAGE
-12550=Trimit mesajul...
+12550=Trimit mesajul…
 
 ## @name NS_MSG_POSTING_MESSAGE
-12551=Expediez mesajul...
+12551=Expediez mesajul…
 
 ## @name NS_ERROR_NNTP_NO_CROSS_POSTING
 12554=Puteți trimite un mesaj numai la un server de news o dată.
 
 ## @name NS_MSG_CANCELLING
-12555=Anulez...
+12555=Anulez…
 
 ## @name NS_MSG_SEND_ERROR_TITLE
 12556=Eroare trimitere mesaj
