--- a/ro/mail/chrome/messenger/subscribe.properties
+++ b/ro/mail/chrome/messenger/subscribe.properties
@@ -41,4 +41,4 @@ currentListTab-nntp.label=Lista curentă de grupuri
 currentListTab-nntp.accesskey=L
 currentListTab-imap.label=Lista de directoare
 currentListTab-imap.accesskey=L
-pleaseWaitString=Vă rog așteptați...
+pleaseWaitString=Vă rog așteptați…
