--- a/ro/mail/installer/override.properties
+++ b/ro/mail/installer/override.properties
@@ -74,7 +74,7 @@ Completed=Terminat
 LicenseTextRB=Vă rugăm revizuiţi acordul de licenţiere înainte de a instala $(^NameDA). Dacă acceptaţi toţi termenii acordului, alegeţi prima opţiune de mai jos. $_CLICK
 ComponentsText=Bifaţi componentele pe care le doriţi instalate şi debifaţi-le pe cele care nu doriţi să le instalaţi. $_CLICK
 ComponentsSubText2_NoInstTypes=Alegeţi componentele pe care doriţi să le instalaţi:
-DirText=$(^NameDA) va fi instalat în dosarul specificat mai jos. Pentru a instala într-un alt dosar, apăsaţi „Răsfoieşte...” şi alegeţi un alt dosar. $_CLICK
+DirText=$(^NameDA) va fi instalat în dosarul specificat mai jos. Pentru a instala într-un alt dosar, apăsaţi „Răsfoieşte…” şi alegeţi un alt dosar. $_CLICK
 DirSubText=Dosarul destinaţie
 DirBrowseText=Selectaţi dosarul în care va fi instalat $(^NameDA):
 SpaceAvailable=„Spaţiu disponibil: ”
