--- a/ro/editor/ui/chrome/composer/editor.properties
+++ b/ro/editor/ui/chrome/composer/editor.properties
@@ -99,11 +99,11 @@ OpenCircle=Cerc deschis
 SolidSquare=Pătrat plin
 NumberStyle=Stil numere
 Automatic=Automat
-Style_1=1, 2, 3...
-Style_I=I, II, III...
-Style_i=i, ii, iii...
-Style_A=A, B, C...
-Style_a=a, b, c...
+Style_1=1, 2, 3…
+Style_I=I, II, III…
+Style_i=i, ii, iii…
+Style_A=A, B, C…
+Style_a=a, b, c…
 Pixels=pixeli
 Percent=Procent
 PercentOfCell=% din celulă
@@ -151,10 +151,10 @@ MissingPublishUrlError=Vă rog introduceți locația unde se va publica această
 MissingPublishFilename=Vă rog introduceți un nume de fișier pentru pagina curentă.
 #LOCALIZATION NOTE (DuplicateSiteNameError): Don't translate %name%
 DuplicateSiteNameError="%name%" există deja. Vă rog introduceți un alt nume pentru sit.
-AdvancedProperties=Proprietăți avansate...
+AdvancedProperties=Proprietăți avansate…
 AdvancedEditForCellMsg=Editarea avansată nu este disponibilă când sunt selectate mai multe celule
 # LOCALIZATION NOTE (ObjectProperties):Don't translate "%obj%" it will be replaced with one of above object nouns
-ObjectProperties=Proprietăți %obj%...
+ObjectProperties=Proprietăți %obj%…
 # LOCALIZATION NOTE This character must be in the above string and not confict with other accesskeys in Format menu
 ObjectPropertiesAccessKey=o
 # LOCALIZATION NOTE (JoinSelectedCells): This variable should contain the "tableJoinCells.accesskey" 
