--- a/ro/mail/chrome/messenger/messenger.properties
+++ b/ro/mail/chrome/messenger/messenger.properties
@@ -38,13 +38,13 @@
 
 # The following are used by the messenger application
 #
-removeAccount=Ștergere cont...
-newFolderMenuItem=Dosar...
-newSubfolderMenuItem=Subdosar...
-newFolder=Dosar nou...
-newSubfolder=Subdosar nou...
+removeAccount=Ștergere cont…
+newFolderMenuItem=Dosar…
+newSubfolderMenuItem=Subdosar…
+newFolder=Dosar nou…
+newSubfolder=Subdosar nou…
 folderProperties=Proprietățile dosarului
-newTag=Etichetă nouă...
+newTag=Etichetă nouă…
 getNextNMessages=Adu următoarele %S subiecte de discuție
 advanceNextPrompt=Avansați la următorul mesaj necitit din %S?
 titleNewsPreHost=de pe
@@ -58,14 +58,14 @@ defaultSaveMessageAsFileName=mesaj.eml
 SaveMailAs=Salvează mesajul ca
 SaveAttachment=Salvează anexa
 SaveAllAttachments=Salvează toate anexele
-LoadingMessageToPrint=Se încarcă mesajul de tipărit...
-MessageLoaded=Mesaj încărcat...
-PrintingMessage=Se tipărește mesajul...
-PrintPreviewMessage=Se previzualizează tipărirea mesajului...
-PrintingCard=Se tipăresc datele de contact...
-PrintPreviewCard=Se previzualizează tipărirea datelor de contact...
-PrintingAddrBook=Se tipărește agenda de contacte...
-PrintPreviewAddrBook=Se previzualizează tipărirea agendei de contacte...
+LoadingMessageToPrint=Se încarcă mesajul de tipărit…
+MessageLoaded=Mesaj încărcat…
+PrintingMessage=Se tipărește mesajul…
+PrintPreviewMessage=Se previzualizează tipărirea mesajului…
+PrintingCard=Se tipăresc datele de contact…
+PrintPreviewCard=Se previzualizează tipărirea datelor de contact…
+PrintingAddrBook=Se tipărește agenda de contacte…
+PrintPreviewAddrBook=Se previzualizează tipărirea agendei de contacte…
 PrintingComplete=Gata.
 PreviewTitle=%S - %S
 LoadingMailMsgForPrint=(Se încarcă conținutul pentru tipărit)
@@ -81,7 +81,7 @@ sendingUnsent=Se trimit mesajele netrimise
 folderExists=Există deja un dosar cu acest nume. Vă rugăm să introduceți un nume diferit.
 folderCreationFailed=Nu s-a putut crea dosarul pentru că numele de dosar pe care l-ați specificat conține un caracter necunoscut. Vă rugăm să introduceți un nume diferit și să încercați din nou.
 
-compactingFolder=Se compactează dosarul %S...
+compactingFolder=Se compactează dosarul %S…
 doneCompacting=Compactarea s-a încheiat
 autoCompactAllFoldersTitle=Compactare dosare
 autoCompactAllFolders=Doriți să compactați toate dosarele locale și cele pentru lucrul deconectat pentru a câștiga spațiu liber pe disc?
@@ -147,7 +147,7 @@ linesColumnHeader=Rânduri
 
 # status feedback stuff
 documentDone=
-documentLoading=Se încarcă mesajul...
+documentLoading=Se încarcă mesajul…
 
 # LOCALIZATION NOTE (autosyncProgress): Do not translate the word "%1$S" or "%2$S" below.
 # Place the word %1$S in your translation where the name of the comma separated folders should appear.
@@ -312,9 +312,9 @@ confirmUnsubscribeText=Sigur doriți să vă dezabonați de la %S?
 # msgHdrViewOverlay.js
 openLabel=Deschide
 openLabelAccesskey=D
-saveLabel=Salvează ca...
+saveLabel=Salvează ca…
 saveLabelAccesskey=a
-detachLabel=Desprinde...
+detachLabel=Desprinde…
 detachLabelAccesskey=D
 deleteLabel=Șterge
 deleteLabelAccesskey=e
@@ -413,14 +413,14 @@ confirmPhishingTitle=Mesajul poate fi o păcăleală
 confirmPhishingUrl=%1$S crede că acest mesaj poate fi o păcăleală. Legăturile din mesaj ar putea să vă ducă la pagini care nu sunt cele pe care le credeți a fi. Sigur doriți să vizitați %2$S?
 
 # Check for Updates
-updatesItem_default=Caută actualizări...
-updatesItem_defaultFallback=Caută actualizări...
-updatesItem_downloading=Se descarcă %S...
-updatesItem_downloadingFallback=Se descarcă actualizarea...
-updatesItem_resume=Se reia descărcarea %S...
-updatesItem_resumeFallback=Se reia descărcarea actualizării...
-updatesItem_pending=Aplică actualizarea descărcată acum...
-updatesItem_pendingFallback=Aplică actualizarea descărcată acum...
+updatesItem_default=Caută actualizări…
+updatesItem_defaultFallback=Caută actualizări…
+updatesItem_downloading=Se descarcă %S…
+updatesItem_downloadingFallback=Se descarcă actualizarea…
+updatesItem_resume=Se reia descărcarea %S…
+updatesItem_resumeFallback=Se reia descărcarea actualizării…
+updatesItem_pending=Aplică actualizarea descărcată acum…
+updatesItem_pendingFallback=Aplică actualizarea descărcată acum…
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Toate dosarele
