Updated thunderbird from en-US.

--- a/ro/mail/chrome/messenger/activity.properties
+++ b/ro/mail/chrome/messenger/activity.properties
@@ -23,3 +23,36 @@ sentMessageTo=Mesaj trimis către %S
 failedToSendMessage=Eșec la trimiterea mesajului
 # LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
 failedToSendMessageTo=Eșec la trimiterea mesajului către %S
+
+# LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
+# Place the word %1$S in your translation where the number of the message being downloaded should appear.
+# Place the word %2$S in your translation where the total number of pending messages should appear.
+# Place the word %3$S in your translation where the name of the folder being processed should appear.
+autosyncProcessProgress=Se descarcă mesajul %1$S din %2$S în %3$S
+# LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
+autosyncProcessDisplayText=Se aduce dosarul %S la zi
+# LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
+autosyncEventDisplayText=%S este la zi
+# LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
+autosyncEventStatusText=Numărul total de mesaje descărcate: %S
+autosyncEventStatusTextNoMsgs=Niciun mesaj descărcat
+# LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
+autosyncContextDisplayText=Se sincronizează: %S
+
+# Message actions that show up in activity manager
+# LOCALIZATION NOTE (deletedMessages): #1 number of messages
+deletedMessages=#1 mesaj șters;#1 mesaje șterse
+# LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
+movedMessages=S-a mutat #1 mesaj din #2 în #3;S-au mutat #1 mesaje din #2 în #3
+# LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
+copiedMessages=S-a copiat #1 mesaj din #2 în #3;S-au copiat #1 mesaje din #2 în #3
+# LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
+fromServerToServer=din #1 în #2
+# LOCALIZATION NOTE (deletedFolder): #1 folder name
+deletedFolder=S-a șters dosarul #1
+# LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
+movedFolder=S-a mutat dosarul #1 în #2
+# LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
+copiedFolder=S-a copiat dosarul #1 în #2
+# LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
+renamedFolder=S-a redenumit #1 în #2
