Bug 478427 -  "Script not responding" message has spelling errors

--- a/he/dom/chrome/dom/dom.properties
+++ b/he/dom/chrome/dom/dom.properties
@@ -38,8 +38,8 @@
 #
 # ***** END LICENSE BLOCK *****
 KillScriptTitle = אזהרה: תסריט אינו מגיב
-KillScriptMessage = יתכן שתסריט בדף זה עסוק, או שאינו מגיב. ביכולתך להפסיק את התסריט כעת, או להמשיך בכדי לראות האם התסריט יושלם.
-KillScriptWithDebugMessage = ייתכן ותסריט בדף זה עסוק או שהוא הפסיק להגיב. אתה יכול לעצור את התסריט כעת, לפתוח אותו בתוכנת ניפוי השגיאות או לתת לתסריט להמשיך. 
+KillScriptMessage = ייתכן שתסריט בדף זה עסוק, או שאינו מגיב. ביכולתך להפסיק את התסריט כעת, או להמשיך בכדי לראות האם התסריט יושלם.
+KillScriptWithDebugMessage = ייתכן שתסריט בדף זה עסוק, או שאינו מגיב. ביכולתך להפסיק את התסריט כעת, לפתוח אותו בתוכנת ניפוי השגיאות או לתת לתסריט להמשיך. 
 KillScriptLocation=תסריט: %S
 StopScriptButton = עצור תסריט
 DebugScriptButton = נפה שגיאות בתסריט
