--- a/ro/mail/installer/override.properties
+++ b/ro/mail/installer/override.properties
@@ -55,8 +55,8 @@
 # and end of a string enclose the strin with an additional double quote
 # (e.g. ""This will include quotes"").
 
-SetupCaption=Instalare $(^Name)
-UninstallCaption=Dezinstalare $(^Name)
+SetupCaption=Instalare $BrandFullName
+UninstallCaption=Dezinstalare $BrandFullName
 BackBtn=< Îna&poi
 NextBtn=Î&nainte >
 AcceptBtn=&Accept termenii din acordul de licenţiere
@@ -71,15 +71,15 @@ ClickNext=Apăsaţi „Înainte >” pentru a continua.
 ClickInstall=Apăsaţi „Instalează” pentru a începe instalarea.
 ClickUninstall=Apăsaţi „Dezinstalează” pentru a începe dezinstalarea.
 Completed=Terminat
-LicenseTextRB=Vă rugăm revizuiţi acordul de licenţiere înainte de a instala $(^NameDA). Dacă acceptaţi toţi termenii acordului, alegeţi prima opţiune de mai jos. $_CLICK
+LicenseTextRB=Vă rugăm revizuiţi acordul de licenţiere înainte de a instala $BrandFullNameDA. Dacă acceptaţi toţi termenii acordului, alegeţi prima opţiune de mai jos. $_CLICK
 ComponentsText=Bifaţi componentele pe care le doriţi instalate şi debifaţi-le pe cele care nu doriţi să le instalaţi. $_CLICK
 ComponentsSubText2_NoInstTypes=Alegeţi componentele pe care doriţi să le instalaţi:
-DirText=$(^NameDA) va fi instalat în dosarul specificat mai jos. Pentru a instala într-un alt dosar, apăsaţi „Răsfoieşte…” şi alegeţi un alt dosar. $_CLICK
+DirText=$BrandFullNameDA va fi instalat în următorul dosar. Pentru a instala într-un alt dosar, apăsaţi Răsfoire şi alegeţi un alt dosar. $_CLICK
 DirSubText=Dosarul destinaţie
-DirBrowseText=Selectaţi dosarul în care va fi instalat $(^NameDA):
+DirBrowseText=Selectaţi dosarul în care va fi instalat $BrandFullNameDA:
 SpaceAvailable=„Spaţiu disponibil: ”
 SpaceRequired=„Spaţiu necesar: ”
-UninstallingText=$(^NameDA) va fi dezinstalat din următorul dosar. $_CLICK
+UninstallingText=$BrandFullNameDA va fi dezinstalat din următorul dosar. $_CLICK
 UninstallingSubText=Dezinstalare din:
 FileError=Eroare la deschiderea fişierului pentru scriere: \r\n\r\n$0\r\n\r\nApăsaţi „Abandon” pentru a opri instalarea,\r\n„Reîncercare” pentru a încerca din nou, sau\r\n„Ignorare” pentru a sări peste acest fişier.
 FileError_NoIgnore=Eroare la deschiderea fişierului pentru scriere: \r\n\r\n$0\r\n\r\nApăsaţi „Reîncercare” pentru a opri instalarea, sau\r\n„Abandon” pentru a opri instalarea.
