--- a/ro/mail/installer/mui.properties
+++ b/ro/mail/installer/mui.properties
@@ -52,41 +52,41 @@
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
-MUI_TEXT_WELCOME_INFO_TITLE=Bine aţi venit la asistentul de instalare al aplicaţiei $(^NameDA)
-MUI_TEXT_WELCOME_INFO_TEXT=Acest asistent vă va ghida pe parcursul instalării $(^NameDA).\n\nEste recomandat să închideţi toate celelalte aplicaţii înainte de a începe instalarea. Aceasta va face posibilă actualizarea unor fişiere de sistem relevante fără a trebui să reporniţi calculatorul.\n\n$_CLICK
+MUI_TEXT_WELCOME_INFO_TITLE=Bine aţi venit la asistentul de instalare $BrandFullNameDA
+MUI_TEXT_WELCOME_INFO_TEXT=Acest asistent vă va ghida pe parcursul instalării $BrandFullNameDA.\n\nEste recomandat să închideţi toate celelalte aplicaţii înainte de a începe instalarea. Aceasta va face posibilă actualizarea unor fişiere de sistem relevante fără a trebui să reporniţi calculatorul.\n\n$_CLICK
 MUI_TEXT_COMPONENTS_TITLE=Alegere componente
-MUI_TEXT_COMPONENTS_SUBTITLE=Alegeţi caracteristicile aplicaţiei $(^NameDA) pe care le doriţi instalate.
+MUI_TEXT_COMPONENTS_SUBTITLE=Alegeţi ce caracteristici $BrandFullNameDA doriţi să instalaţi.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Descriere
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Poziţionaţi mausul deasupra unei componente pentru a-i vedea descrierea.
 MUI_TEXT_DIRECTORY_TITLE=Alegere loc de instalare
-MUI_TEXT_DIRECTORY_SUBTITLE=Alegeţi dosarul în care va fi instalat $(^NameDA).
+MUI_TEXT_DIRECTORY_SUBTITLE=Alegeţi dosarul în care va fi instalat $BrandFullNameDA.
 MUI_TEXT_INSTALLING_TITLE=Instalare
-MUI_TEXT_INSTALLING_SUBTITLE=Vă rugăm aşteptaţi în timp ce  $(^NameDA) este instalat.
+MUI_TEXT_INSTALLING_SUBTITLE=Vă rugăm aşteptaţi ca $BrandFullNameDA să fie instalat.
 MUI_TEXT_FINISH_TITLE=Instalare încheiată
 MUI_TEXT_FINISH_SUBTITLE=Instalarea s-a încheiat cu succes.
 MUI_TEXT_ABORT_TITLE=Instalare abandonată
 MUI_TEXT_ABORT_SUBTITLE=Instalarea nu s-a încheiat cu succes.
 MUI_BUTTONTEXT_FINISH=În&cheiere
-MUI_TEXT_FINISH_INFO_TITLE=Asistentul a terminat instalarea $(^NameDA)
-MUI_TEXT_FINISH_INFO_TEXT=$(^NameDA) a fost instalat pe calculatorul dumneavoastră.\n\nApăsaţi „Termină” pentru a închide acest asistent.
-MUI_TEXT_FINISH_INFO_REBOOT=Calculatorul dumneavoastră trebuie să fie repornit pentru a încheia instalarea $(^NameDA). Doriţi să reporniţi acum?
+MUI_TEXT_FINISH_INFO_TITLE=Asistentul a terminat instalarea $BrandFullNameDA
+MUI_TEXT_FINISH_INFO_TEXT=$BrandFullNameDA a fost instalat pe calculatorul dumneavoastră.\n\nApăsaţi „Încheiere” pentru a închide acest asistent.
+MUI_TEXT_FINISH_INFO_REBOOT=Calculatorul dumneavoastră trebuie să fie repornit pentru a încheia instalarea $BrandFullNameDA. Doriţi să reporniţi acum?
 MUI_TEXT_FINISH_REBOOTNOW=Reporneşte acum
 MUI_TEXT_FINISH_REBOOTLATER=Vreau să repornesc manual mai târziu
 MUI_TEXT_STARTMENU_TITLE=Alegere dosar meniu start
-MUI_TEXT_STARTMENU_SUBTITLE=Alegeţi un dosar al meniului start pentru scurtăturile $(^NameDA).
+MUI_TEXT_STARTMENU_SUBTITLE=Alegeţi un dosar al meniului start pentru scurtăturile $BrandFullNameDA.
 MUI_INNERTEXT_STARTMENU_TOP=Alegeţi dosarul de meniu start în care doriţi să creaţi scurtăturile pentru program. Puteţi introduce un alt nume pentru a crea un dosar nou.
-MUI_TEXT_ABORTWARNING=Sigur doriţi să renunţaţi la instalarea $(^Name)?
-MUI_UNTEXT_WELCOME_INFO_TITLE=Bine aţi venit la asistentul de dezinstalare a aplicaţiei $(^NameDA)
-MUI_UNTEXT_WELCOME_INFO_TEXT=Acest asistent vă va ghida pe parcursul dezinstalării $(^NameDA).\n\nÎnainte de a începe dezinstalarea, asiguraţi-vă că $(^NameDA) nu rulează.\n\n$_CLICK
-MUI_UNTEXT_CONFIRM_TITLE=Dezinstalare $(^NameDA)
-MUI_UNTEXT_CONFIRM_SUBTITLE=Veţi şterge $(^NameDA) de pe calculatorul dumneavoastră.
+MUI_TEXT_ABORTWARNING=Sigur doriţi să renunţaţi la instalarea $BrandFullName?
+MUI_UNTEXT_WELCOME_INFO_TITLE=Bine aţi venit la asistentul de dezinstalare $BrandFullNameDA
+MUI_UNTEXT_WELCOME_INFO_TEXT=Acest asistent vă va ghida pe parcursul dezinstalării $BrandFullNameDA.\n\nÎnainte de a începe dezinstalarea, asiguraţi-vă că $BrandFullNameDA nu rulează.\n\n$_CLICK
+MUI_UNTEXT_CONFIRM_TITLE=Dezinstalare $BrandFullNameDA
+MUI_UNTEXT_CONFIRM_SUBTITLE=Veţi şterge $BrandFullNameDA de pe calculatorul dumneavoastră.
 MUI_UNTEXT_UNINSTALLING_TITLE=Dezinstalare
-MUI_UNTEXT_UNINSTALLING_SUBTITLE=Vă rugăm aşteptaţi cât $(^NameDA) este dezinstalat.
+MUI_UNTEXT_UNINSTALLING_SUBTITLE=Vă rugăm aşteptaţi cât $BrandFullNameDA este dezinstalat.
 MUI_UNTEXT_FINISH_TITLE=Dezinstalare încheiată
 MUI_UNTEXT_FINISH_SUBTITLE=Dezinstalarea s-a încheiat cu succes.
 MUI_UNTEXT_ABORT_TITLE=Dezinstalare abandonată
 MUI_UNTEXT_ABORT_SUBTITLE=Dezinstalarea nu s-a încheiat cu succes.
-MUI_UNTEXT_FINISH_INFO_TITLE=Se încheie asistentul de dezinstalare $(^NameDA)
-MUI_UNTEXT_FINISH_INFO_TEXT=$(^NameDA) a fost dezinstalat de pe calculatorul dumneavoastră.\n\nApăsaţi „Termină” pentru a închide acest asistent.
-MUI_UNTEXT_FINISH_INFO_REBOOT=Calculatorul dumneavoastră trebuie repornit pentru a încheia dezinstalarea $(^NameDA). Doriţi să reporniţi acum?
-MUI_UNTEXT_ABORTWARNING=Sigur doriţi să renunţaţi la dezinstalarea $(^Name)?
+MUI_UNTEXT_FINISH_INFO_TITLE=Asistentul a terminat dezinstalarea $BrandFullNameDA
+MUI_UNTEXT_FINISH_INFO_TEXT=$BrandFullNameDA a fost dezinstalat de pe calculatorul dumneavoastră.\n\nApăsaţi „Încheiere” pentru a închide acest asistent.
+MUI_UNTEXT_FINISH_INFO_REBOOT=Calculatorul dumneavoastră trebuie repornit pentru a încheia dezinstalarea $BrandFullNameDA. Doriţi să reporniţi acum?
+MUI_UNTEXT_ABORTWARNING=Sigur doriţi să renunţaţi la dezinstalarea $BrandFullName?
